--- a/colorGame.css
+++ b/colorGame.css
@@ -1,3 +1,13 @@
+body {
+	background: #232323;
+}
+
+h1 {
+	color: white;
+	text-align: center;
+}
+
+/* Squares */
 .square {
 	width: 30%;
 	padding-bottom: 30%;
@@ -6,15 +16,8 @@
 	float: left;
 }
 
-body {
-	background: grey;
-}
-
 #container {
 	width: 60%;
 	margin: 0 auto;
 }
 
-h1 {
-	color: white;
-}
