--- a/colorGame.css
+++ b/colorGame.css
@@ -1,10 +1,18 @@
 body {
 	background: #232323;
+	margin: 0;
+
 }
 
 h1 {
 	color: white;
 	text-align: center;
+	background: steelblue;
+	margin: 0;
+	font-weight: normal;
+	line-height: 1.1;
+	padding: 20px 0;
+	text-transform: uppercase;
 }
 
 /* Squares */
@@ -14,10 +22,55 @@ h1 {
 	background-color: purple;
 	margin: 1.66%;
 	float: left;
+	border-radius: 15%;
+	transition: background 0.6s;
+	--webkit-transition: background 0.6s;
+	-moz-webkit-transition: background 0.6s;
+
+}
+
+#stripe {
+	height: 30px;
+	background: white;
+	text-align: center;
+	color: black;
+}
+
+.selected {
+	color: white;
+	background: steelblue;
+}
+
+#colorDisplay {
+	font-size: 200%;
 }
 
 #container {
-	width: 60%;
-	margin: 0 auto;
+	margin: 20px auto;
+	max-width: 600px;
 }
 
+button {
+	border: none;
+	background: none;
+	text-transform: uppercase;
+	height: 100%;
+	font-weight: 700;
+	color: steelblue;
+	letter-spacing: 1px;
+	font-size: inherit;
+	transition: all 0.3s;
+	--webkit-transition: all 0.3s;
+	-moz-webkit-transition: all 0.3s;
+	outline: none;
+}
+
+button:hover {
+	color: white;
+	background: steelblue;
+}
+
+#message {
+	display: inline-block;
+	width: 20%;
+}
